# LLM-Logic-Exec-Verify

./: Cargo.toml  README.md  logic.md  rust.p  rust.prompt  state.md
src/: build_tool.rs  cache.rs  llm.rs  llm_api.rs  llm_parser.rs  llm_prompt.rs  main.rs  prompt.rs  state_machine.rs
