[package]
name = "lmm-logic-exec-verfy"
version = "0.2.0"
edition = "2021"
authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/LLM-Logic-Exec-Verify"
license-file = "LICENSE"

[dependencies]

serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
